fix(frontend): fix card overflow

--- a/frontend_app_kanban/src/component/KanbanCard.styl
+++ b/frontend_app_kanban/src/component/KanbanCard.styl
@@ -10,7 +10,7 @@ cardWidth = 280px
     border-radius standardBorderRadius
     padding standardSpacing
     text-align start
-    overflow auto
+    margin-bottom standardSpacing
     &.buttonHidden
       .kanban_addCard, .dropdown
         display none
